2001-11-29  Radek Doulik  <rodo@ximian.com>

	* ppc/tramp.c: use r12 which is volatile instead of non-volatile
	r14 to avoid saving

	* Makefile.am (libmonoarch_la_LIBADD): added ppc to DIST_SUBDIRS
	generate libmonoarch for ppc

Tue Nov 27 15:24:07 CET 2001 Paolo Molaro <lupus@ximian.com>

	* x96/x86-codegen.c: x86_lea_memindex() added.

Thu Nov 15 17:41:01 CET 2001 Paolo Molaro <lupus@ximian.com>

	* x86/tramp.c: handle enums with underlying type different from int32.

Wed Nov 14 19:21:26 CET 2001 Paolo Molaro <lupus@ximian.com>

	* x86/tramp.c: handle boolean as a return value.
	* x96/x86-codegen.c: x86_widen_memindex() added.

2001-11-07  Miguel de Icaza  <miguel@ximian.com>

	* x86/tramp.c: Include stdlib to kill warning.

Mon Oct 22 15:20:14 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* x86/tramp.c: handle boolean, u1 and i1 as return values.

Wed Oct 10 16:07:24 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* x86/x86-codegen.c: added x86_set_{reg,mem,membase}.

Mon Oct 8 16:13:07 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* x86/tramp.c: remove mono_get_ansi_string () and use
	mono_string_to_utf8 () instead.

Thu Oct 4 19:09:13 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* x86/tramp.c: allow marshalling valuetypes if they are
	4 bytes long.

Mon Oct 1 18:48:27 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* x86/tramp.c: fix thinko (s/SUB/ADD/) in stack adjustment
	and avoid a couple of unnecessary instructions.

Fri Sep 28 19:43:12 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* x86/tramp.c: marshal valuetypes that are enums.

Thu Sep 27 15:34:37 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* x86/x86-codegen.h: in memindex operand you can use X86_NOBASEREG
	as basereg.

Wed Sep 26 16:29:36 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* x86/x86-codegen.h: added memindex addressing mode encoding
	(and mov to/from register opcodes).

Mon Sep 24 18:49:01 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* x86/tramp.c: don't change a MONO_TYPE_STRING to a char*